WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177364
REGRESSION(
r221909
): Failing fast/text/international/iso-8859-8.html
https://bugs.webkit.org/show_bug.cgi?id=177364
Summary
REGRESSION(r221909): Failing fast/text/international/iso-8859-8.html
Zan Dobersek
Reported
2017-09-22 07:27:13 PDT
Created
attachment 321545
[details]
Diff image for fast/text/word-space-between-inlines.html failure The following two layout tests fail after changes in
r221909
: - fast/text/international/iso-8859-8.html - fast/text/word-space-between-inlines.html
https://trac.webkit.org/changeset/221909/webkit
The first one fails with a text failure: --- /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/fast/text/international/iso-8859-8-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/fast/text/international/iso-8859-8-actual.txt @@ -1,4 +1,4 @@ Test rendering of ISO-8859-8. -PASS Test completed successfully +FAIL Test 1 LTR: character should be rendered right of כ The second one is a reference test, but fails with a minimum difference between the actual and expected renderings (0.01%). Diff image is attached.
Attachments
Diff image for fast/text/word-space-between-inlines.html failure
(750 bytes, image/png)
2017-09-22 07:27 PDT
,
Zan Dobersek
no flags
Details
A test content to check the position of the trainling space
(559 bytes, text/html)
2017-10-02 21:13 PDT
,
Fujii Hironori
no flags
Details
Patch
(5.33 KB, patch)
2017-10-02 23:53 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2017-09-26 20:16:53 PDT
fast/text/word-space-between-inlines.html fails in ports enabling the advance text rendering mode, Cocoa and FreeType ports.
Bug 142086
tracks the failure.
Fujii Hironori
Comment 2
2017-10-02 03:11:50 PDT
fast/text/international/iso-8859-8.html outputs the following error message to stderr in Debug build:
> ERROR: Shaper couldn't shape text run. > /webkit/Source/WebCore/platform/graphics/cairo/FontCairoHarfbuzzNG.cpp(97) : void WebCore::FontCascade::adjustSelectionRectForComplexText(const WebCore::TextRun&, WebCore::LayoutRect&, unsigned int, unsigned int) const
Fujii Hironori
Comment 3
2017-10-02 04:12:18 PDT
The second div element has 8 chracters.
> <div class="test">שנב גקכ </div>
Its RenderText removes the last trailing space. Then, it has 7 characters, "שנב גקכ". getClientRects tried get the position of the 7th character (the removed space). Then, HarfBuzzShaper::shape failed.
Fujii Hironori
Comment 4
2017-10-02 21:13:11 PDT
Created
attachment 322490
[details]
A test content to check the position of the trainling space I checked the position of the trainling space. Google Chrome 61: left:78 width:0 Firefox 56 : left:63.98 width:0 Edge : left:56.79 width:4 Mac port : left:68 width:0 GTK+ port : left:11 width:57 Screenshots:
https://photos.app.goo.gl/HpfoE56etUyYj2092
GTK+ port returns the rect of the whole sentence.
Fujii Hironori
Comment 5
2017-10-02 23:53:43 PDT
Created
attachment 322495
[details]
Patch
WebKit Commit Bot
Comment 6
2017-10-03 10:27:17 PDT
The commit-queue encountered the following flaky tests while processing
attachment 322495
[details]
: fast/events/popup-blocking-timers3.html
bug 177822
(authors:
cdumez@apple.com
,
jochen@chromium.org
, and
mark.lam@apple.com
) http/tests/security/window-properties-clear-domain.html
bug 177823
(authors:
koivisto@iki.fi
and
rniwa@webkit.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 7
2017-10-03 11:39:34 PDT
Comment on
attachment 322495
[details]
Patch Clearing flags on attachment: 322495 Committed
r222792
: <
http://trac.webkit.org/changeset/222792
>
WebKit Commit Bot
Comment 8
2017-10-03 11:39:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug